--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,3 +23,84 @@ div.margen {
 h1 {
   color: #ffffff;
 }
+
+h3 {
+  color: #6e6cf3;
+}
+
+/* Header */
+
+header h1,
+header h3 {
+  text-align: center;
+}
+
+.hr {
+  width: 80%;
+  margin: 10px auto;
+  height: 0.5px;
+  background-color: aliceblue;
+  transition: height 0.8ms ease-in;
+}
+
+/* Content */
+
+section {
+  margin: auto;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+
+.form-group {
+  margin: 20px 0;
+  line-height: 40px;
+}
+
+label {
+  color: #ffffff;
+}
+
+textarea {
+  width: 100%;
+  font-family: "Open Sans", sans-serif;
+  padding: 5px;
+}
+
+.flex-group {
+  display: flex;
+  flex: 3;
+}
+
+.flex-group label {
+  flex: 1;
+}
+
+.txt-input {
+  padding: 5px;
+  width: auto;
+  flex: 2;
+}
+
+.input {
+  outline: 0;
+  border: 2px solid #6e6cf3;
+  border-radius: 9px;
+}
+
+.form-buttons {
+  text-align: center;
+}
+
+.button {
+  padding: 5px;
+  width: 30%;
+  border: 2px solid #6e6cf3;
+  border-radius: 5px;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.button:hover {
+  box-shadow: 0 0 2px 1px rgba(255, 255, 255, 0.7);
+}
