--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,21 +6,23 @@
   padding: 0;
 }
 
+:root {
+  --font: "Open Sans", sans-serif;
+}
+
+*::selection {
+  background-color: #01cbbe;
+  color: #ffffff;
+}
+
 body {
   background-color: #1a1f23;
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--font);
   padding: 20px;
 }
 
-div.margen {
-  border: 5px solid #6e6cf3;
-  border-radius: 9px;
-  width: 93%;
-  height: 86vh;
-  padding: 20px 30px;
-}
-
-h1 {
+h1,
+h2 {
   color: #ffffff;
 }
 
@@ -43,6 +45,23 @@ header h3 {
   transition: height 0.8ms ease-in;
 }
 
+/* Margen */
+
+div.margen {
+  border: 5px solid #6e6cf3;
+  border-radius: 9px;
+  width: 93%;
+  height: 86vh;
+  padding: 20px 30px;
+  overflow-y: scroll;
+}
+
+.margen::-webkit-scrollbar {
+  width: 20px;
+  height: 100px;
+  display: none;
+}
+
 /* Content */
 
 section {
@@ -63,7 +82,7 @@ label {
 
 textarea {
   width: 100%;
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--font);
   padding: 5px;
 }
 
@@ -86,6 +105,13 @@ textarea {
   outline: 0;
   border: 2px solid #6e6cf3;
   border-radius: 9px;
+  font-family: var(--font);
+  max-width: 100%;
+  max-height: 38vh;
+}
+
+textarea {
+  min-width: 800px;
 }
 
 .form-buttons {
@@ -95,12 +121,20 @@ textarea {
 .button {
   padding: 5px;
   width: 30%;
-  border: 2px solid #6e6cf3;
+  border: 3px solid #6e6cf3;
   border-radius: 5px;
   background-color: transparent;
   color: #ffffff;
+  cursor: pointer;
+  font-family: var(--font);
+  font-weight: bold;
 }
 
 .button:hover {
   box-shadow: 0 0 2px 1px rgba(255, 255, 255, 0.7);
+  text-shadow: 0 0 2px 1px rgba(255, 255, 255, 0.7);
+}
+
+form {
+  max-width: 90%;
 }
