--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,16 +56,6 @@ div.margen {
   overflow-y: scroll;
 }
 
-/* .margen::-webkit-scrollbar {
-  width: 20px;
-  height: 100px;
-  display: none;
-} */
-
-/* .margen::-webkit-scrollbar-thumb {
-
-} */
-
 /* Content */
 
 section {
@@ -141,4 +131,40 @@ textarea {
 
 form {
   max-width: 90%;
+}
+
+/* Personalización de scroll */
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 2px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
